# CTF-Conference-Tracker

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.MD  docker-compose.yml  project_info.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roadmap.md  todo.md
.github/workflows/: ci.yml
alembic/: env.py
deploy/: Dockerfile  docker-compose.yml
docs/: ROADMAP.md  SECURITY.md
researches/: research.crypto_libs.md
researches/chatgpt/: research.chatgpt.result.md
researches/claude/: research.claude.result.md
researches/deepseek/: research.deepseek.sources.md
researches/gemini-fast/: research.gemini-fast.sources.md
researches/gemini-pro/: Infographic.md  research.gemini-pro.chat_link.txt  research.gemini-pro.result.md  research.gemini-pro.sources.md
researchs/chatgpt/: research.chatgpt.chat_link.txt  research.chatgpt.sources.md
researchs/claude/: research.claude.chat_link.txt  research.claude.sources.md
researchs/deepseek/: research.deepseek.chat_link.txt  research.deepseek.prompt.md  research.deepseek.result.md
researchs/gemini-fast/: Infographic.md  research.gemini-fast.chat_link.txt  research.gemini-fast.prompt.md  research.gemini-fast.result.md  web-page.html
researchs/gemini-pro/: web-page.html
researchs/qwen/: research.qwen.chat_link.txt  research.qwen.result.md  research.qwen.sources.md
scripts/: manage.py  setup.sh
src/: main.py
src/app/core/: config.py
src/app/db/: base.py  models.py  session.py
src/app/services/: ai.py  (+2 more)
tests/: conftest.py  test_api.py  test_research_logic.py
(+7 files in other folders)
