[tool.poetry]
name = "ctf-tracker"
version = "0.1.0"
description = "A global cybersecurity event tracking and intelligence platform."
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
arq = "^0.25.0"
redis = "^5.0.1"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
bleach = "^6.1.0"
python-telegram-bot = "^20.7"
ics = "^0.7.2"
jinja2 = "^3.1.3"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
